--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
 language: go
 go:
   - 1.4
+before_install:
+  - mkdir -p $HOME/gopath/src/sourcegraph.com/sourcegraph
+  - mv $TRAVIS_BUILD_DIR $HOME/gopath/src/sourcegraph.com/sourcegraph/gopathexec
+  - export TRAVIS_BUILD_DIR=$HOME/gopath/src/sourcegraph.com/sourcegraph/gopathexec
+  - cd $TRAVIS_BUILD_DIR
 install:
   - go get golang.org/x/tools/cmd/vet
 script:
